# bare-llama

./: .gitignore  CMakeLists.txt  NOTICE  README.md  binding.c  binding.js  example.mjs  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: prebuilds.yml
docs/: README.md
docs/classes/: LlamaModel.md  LlamaModelContext.md
docs/functions/: createContext.md  createModel.md  destroyContext.md  destroyModel.md  detokenize.md  encode.md  generate.md  getModelMetadata.md  loadModel.md  tokenize.md
docs/interfaces/: LlamaModelInstanceMetadata.md
docs/type-aliases/: LlamaContextInstance.md  LlamaModelInstance.md
models/: README.md
test/: index.test.js
